# XPDK

./: .gitignore  Cargo.toml  DESIGN.md  README.md
benches/: Cargo.toml
benches/src/: latency.rs  throughput.rs
examples/: Cargo.toml
lockfree-ringbuf/: Cargo.toml  QUICKSTART.md  README.md
lockfree-ringbuf/benches/: benchmarks.rs
lockfree-ringbuf/examples/: batch_example.rs  demo.rs  mpmc_example.rs  mpsc_example.rs  spmc_example.rs  spsc_example.rs
lockfree-ringbuf/src/: lib.rs  mpmc.rs  mpsc.rs  spmc.rs  spsc.rs
src/: lib.rs  numa.rs  offload.rs
src/memory/: mod.rs
src/poll/: mod.rs  mod.rs.backup
src/queue/: mod.rs
src/udp/: mod.rs
src/utils/: config.rs  cpu.rs  logging.rs  mod.rs  numa.rs  offload.rs  time.rs
